feat: 모달 내용 수정 및 팝업 구현

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,7 +6,7 @@
       "@assets/*": ["assets/*"],
       "@components/*": ["components/*"],
       "@constants/*": ["constants/*"],
-      "@context/*": ["context/*"],
+      "@contexts/*": ["contexts/*"],
       "@hooks/*": ["hooks/*"],
       "@pages/*": ["pages/*"],
       "@styles/*": ["styles/*"],
