--- a/package.json
+++ b/package.json
@@ -38,7 +38,18 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^9.6.0",
     "customize-cra": "^1.0.0",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.9.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "globals": "^15.8.0",
+    "prettier": "^3.3.2",
     "react-app-rewired": "^2.2.1"
   }
 }
