--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
     "react/react-in-jsx-scope": "off", // React 17+ 에서는 알아서 import react from 'react' 를 해줍니다
     "no-unused-vars": "off", // 사용하지 않는 변수 작성에 대한 설정
     "react/jsx-props-no-spreading": "off", // {...props} 프롭스에 대해 spreading 설정
-    "react/function-component-definition": "off" // React 컴포넌트를 함수 선언 강제
+    "react/function-component-definition": "off", // React 컴포넌트를 함수 선언 강제
+    "react/require-default-props": "off" // props 기본값 설정이 복잡해짐
   }
 }
