--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,1 @@
-echo "* text=auto eol=lf" > .gitattributes
-git add .gitattributes
-git commit -m "chore: Enforce LF line endings"//git 자동 crlf 설정값 변경을 위한 내용
+* text=auto eol=lf
