--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.14.1",
     "styled-components": "^6.1.11",
     "swiper": "^11.1.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "proxy": "https://fandom-k-api.vercel.app"
   },
   "scripts": {
     "start": "react-app-rewired start",
